<resources>
    <string name="app_name">VeelTaxi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ServerError">Server Error</string>
    <string name="noDataError">No data !!</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_main">VeelTaxi</string>
    <string name="InvalidUsername">Invalid Username</string>
    <string name="InvalidEmail">Invalid Email</string>
    <string name="InvalidPassword">Invalid Password</string>
    <string name="UserNameHint">Enter your User Name</string>
    <string name="EmailHint">Enter your Email</string>
    <string name="StartText">Start</string>
    <string name="LoginText">Login</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->


    <!-- Ad Details -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1571785604871931/2470616802</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyDTm3ckt_wWm4nbo3RHgln9P2bVfvKJLIs
    </string>
    <string name="TaxiIdHint">Enter Taxi ID</string>
    <string name="taxi_name_text">Jhair</string>
    <string name="taxi_email_text">Email : </string>
    <string name="taxi_phone_text">Phone :  </string>
    <string name="taxi_company_text">Company : </string>
    <string name="taxi_id_text">Taxi Driver ID : </string>
    <string name="subjectText">VeelTaxi Confirmation</string>
    <string name="messagetext">this a  start confirmation service</string>
    <string name="noTaxiId">Taxi Id does not exist</string>
    <string name="NoInternetConnection">No Internet Connection</string>

    <string name="home_item">Home</string>
    <string name="email_prim_edit_item">Primary Email</string>
    <string name="email_alt1_edit_item">Contact 1 Email</string>
    <string name="email_alt2_edit_item">Contact 2 Email</string>
    <string name="email_alt3_edit_item">Contact 3 Email</string>
    <string name="email_alt4_edit_item">Contact 4 Email</string>
    <string name="log_out_item">Logout</string>
    <string name="configuracion_item">Configuration</string>
    <string name="EmailChanged">Email Changed!!</string>
    <string name="EmailChangeDialog">Email Change dialog</string>
    <string name="DoneText">Done</string>
    <string name="CancelText">Cancel</string>
    <string name="messageHeader">Hi, everyone</string>
    <string name="messageBody">This mail is to inform you...</string>

    <string name="htmlEmail"><![CDATA[<body><h1>Hi All</h1><p>This message explains your Service Start with
      <strong>VeelTaxi </strong> app in Peru.&nbsp;</p><br><br>
      <blockquote>Greets<a></blockquote><br>VeelTaxi Team</body>]]></string>
    <string name="ContactEmailDoesNotExist">Contact Email Does Not Exist!!</string>
    <string name="VeelTaxiEmail" translatable="false">veeltaxi2015@gmail.com</string>
    <string name="VeelTaxiAdmin">Veel Taxi Admin</string>
    <string name="PleaseWait">Please wait</string>
    <string name="SendingMail">Sending Mail</string>
    <string name="EmailSent">Email sent!!</string>
    <string name="EmailIsNotChanged">Email has not been changed</string>
    <string name="EmailPrimary">Primary Email</string>
    <string name="EmailAlternative1">Contact 1 Email</string>
    <string name="EmailAlternative2">Contact 2 Email</string>
    <string name="EmailAlternative3">Contact 3 Email</string>
    <string name="EmailAlternative4">Contact 4 Email</string>

    <string name="title_activity_maps">Map</string>
    <string name="StartRideText">Start Ride</string>
    <string name="EndRideText">End Ride</string>
    <string name="traffic">Traffic</string>
    <string name="map_not_ready">Map not ready</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>

</resources>
