<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_item" />
        <item
            android:id="@+id/email_prim_edit"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/email_prim_edit_item" />
        <item
            android:id="@+id/email_alt1_edit"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/email_alt1_edit_item" />
        <item
            android:id="@+id/email_alt2_edit"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/email_alt2_edit_item" />
        <item
            android:id="@+id/email_alt3_edit"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/email_alt3_edit_item" />
        <item
            android:id="@+id/email_alt4_edit"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/email_alt4_edit_item" />
        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>
