<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--android:paddingTop="30dp"-->
<!--android:orientation="vertical"-->
<!--android:background="@color/colorPrimaryDark"-->
<!--android:gravity="center|top"-->
<!--android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--tools:context=".activities.Main2Activity">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|top"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        ads:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/imbTaxiDriver"
        android:layout_centerInParent="true"
        android:src="@drawable/circulo_foto_taxi"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:elevation="4dp"
    />


    <TextView
        android:id="@+id/taxi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/taxi_name_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taxi_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxi_name"
        android:layout_marginLeft="30dp"
        android:text="@string/taxi_id_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="left" />


    <TextView
        android:id="@+id/taxi_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxi_id"
        android:layout_marginLeft="30dp"
        android:text="@string/taxi_company_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="left" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imbGreenSlide"
            android:src="@drawable/green_slide_botton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:scaleType="centerCrop" />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imbGreenButton"
            android:src="@drawable/green_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/green_slide_botton"
            android:scaleType="centerCrop" />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imbRedButton"
            android:src="@drawable/red_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/red_slide_button"
            android:scaleType="centerCrop" />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imbRedSlide"
            android:src="@drawable/red_slide_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto">

        <com.google.android.gms.ads.AdView
            android:layout_alignParentBottom="true"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"/>

    </RelativeLayout>
</LinearLayout>
