<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">


    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imbAdmin"
        android:src="@drawable/veeltaxi_logo"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/tblRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_gravity="top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailHint"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:background="@drawable/edittext"
            android:imeOptions="actionNext"
            android:id="@+id/etemail"
            android:visibility="visible"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StartText"
            android:id="@+id/btnSaltearse"
            style="@style/ButtonStyle"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@color/material_red_500"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tblLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:visibility="invisible">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext"
        android:imeOptions="actionNext"
        android:id="@+id/etusername"
        android:visibility="visible"
        android:gravity="fill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="Password"
            android:background="@drawable/edittext"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/etpassword"
            android:visibility="visible"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginText"
            android:layout_margin="10dp"
            android:id="@+id/btnlogin"
            style="@style/ButtonStyle"
            android:textColor="@color/white"
            android:background="@color/material_red_500"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"/>
    </LinearLayout>
    </FrameLayout>
</LinearLayout>
